# distributed-file-storage

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240910000000_create_file_chunks_table.sql
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  utils.rs
src/api/: download_file.rs  get_file_data.rs  mod.rs  upload_file.rs
